fix mobile layout bugs

--- a/themes/jjr/source/css/_layouts.less
+++ b/themes/jjr/source/css/_layouts.less
@@ -61,7 +61,7 @@
   .header {
     margin: 1em 0;
   }
-  .header h1 {
+  .header h1, .article-detail > header h1 {
     font-size: 1.4em;
     margin-bottom: 0.6em;
   }
@@ -69,7 +69,7 @@
     font-size: 1em;
   }
   .article {
-    margin: 1em 0 2.5em;
+    margin: 1em 0 0.5em;
   }
   .archive {
     width: 80%;
@@ -83,6 +83,27 @@
     text-align: left !important;
     border: 0 !important;
     margin: 0 !important;
+  }
+  .tags {
+    float: none;
+  }
+  li.article-tag-list-item {
+    display: inline-block;
+    margin-right: 1em;
+    margin-left: 0;
+  }
+  li.article-tag-list-item:first-child {
+    margin-left: 1em;
+  }
+  .article-nav-archive {
+    clear: both;
+    padding-top: 2em;
+  }
+  .bottom-nav {
+    margin: 0;
+  }
+  footer {
+    margin: 1em 0;
   }
   footer .nav {
     margin: 1em 0;
